# dyn_shim

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
dyn_shim_macros/: Cargo.toml
dyn_shim_macros/src/: lib.rs
examples/: broadcast.rs  clone.rs  foreign.rs  hash.rs  migrate_dyn_clone.rs  migrate_dyn_hash.rs  reflexive.rs  trait_object.rs
src/: lib.rs
tests/: compile_fail.rs  it.rs
tests/ui/: attr_non_method.rs  attr_non_method.stderr  attr_unknown_arg.rs  attr_unknown_arg.stderr  bound_clone_unlisted_marker.rs  bound_clone_unlisted_marker.stderr  bound_clone_unsatisfied.rs  bound_clone_unsatisfied.stderr  bound_copy.rs  bound_copy.stderr  bound_default.rs  bound_default.stderr  bound_eq.rs  bound_eq.stderr  bound_hash_unsatisfied.rs  bound_hash_unsatisfied.stderr  bound_maybe_sized.rs  bound_maybe_sized.stderr  bound_not_dyn_compatible.rs  bound_not_dyn_compatible.stderr  bound_ord.rs  bound_ord.stderr  bound_partial_eq.rs  bound_partial_eq.stderr  bound_partial_ord.rs  bound_partial_ord.stderr  bound_path_form.rs  bound_path_form.stderr  bound_sized.rs  bound_sized.stderr  by_value_self.rs  by_value_self.stderr  foreign_missing_path.rs  foreign_missing_path.stderr  receiverless_int_return.rs  receiverless_int_return.stderr  receiverless_self_return.rs  receiverless_self_return.stderr  recognized_has_items.rs  recognized_has_items.stderr  (+38 more)
