[package]
name = "dyn_shim"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Generate dyn-compatible shim traits"
repository = "https://github.com/nixpulvis/dyn_shim"
documentation = "https://docs.rs/dyn_shim"
readme = "README.md"
keywords = ["dyn-compatible", "dyn-safe", "trait", "proc-macro", "macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1.0"
