[package]
name = "dyn_shim"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Generate dyn-compatible shim traits"
repository = "https://github.com/nixpulvis/dyn_shim"
documentation = "https://docs.rs/dyn_shim"
readme = "README.md"
keywords = ["dyn-compatible", "dyn-safe", "trait", "proc-macro", "macro"]
categories = ["rust-patterns"]

[workspace]
members = ["dyn_shim_macros"]

[features]
default = []
# Provide `DynClone`, a standalone dyn-compatible shim for `Clone`, and make a
# recognized `Clone` bound add `DynClone` as a supertrait of the shim.
dyn_clone = ["dyn_shim_macros/dyn_clone"]
# Provide `DynHash`, a standalone dyn-compatible shim for `Hash`, and make a
# recognized `Hash` bound add `DynHash` as a supertrait of the shim.
dyn_hash = ["dyn_shim_macros/dyn_hash"]

[dependencies]
dyn_shim_macros = { version = "0.2.0", path = "dyn_shim_macros" }

[dev-dependencies]
trybuild = "1.0"
